# winter

./: .clang-format  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  meson.build  milestones.md  t.wtx
.github/workflows/: main.yml
docs/examples/: return.wtx
src/: CMakeLists.txt  ast.h  compiler.cpp  compiler.h  error.h  lexer.cpp  lexer.h  main.cpp  main2.cpp  parser.cpp  parser.h
src/frontend/: ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h
src/winter/: CMakeLists.txt  ast_nodes.h  bytecode.cpp  bytecode.h  error.h  helpers.cpp  helpers.h  lexer.cpp  lexer.h  object.h  parser.cpp  parser.h  winter.h
subprojects/: willow.wrap
tests/: CMakeLists.txt  bytecode_test.h  error_test.h  helpers_test.h  lexer_test.h  main.cpp  object_test.h  parser_test.h  test.cmake  test.cpp  winter_test.h
